tests/rspack-test/normalCases/errors/duplicate-export/foo.js
export { A } from "./a";
export { A } from "./a";
